<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <SurfaceView
        android:id="@+id/emu_surface"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/touch_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_l"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/l"
            android:alpha="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/btn_r"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/r"
            android:alpha="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dpad_container"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginBottom="-16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Space
                android:id="@+id/dpad_center"
                android:layout_width="1px"
                android:layout_height="1px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_up"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="-5dp"
                android:alpha="0.7"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_up"
                app:layout_constraintBottom_toTopOf="@+id/dpad_center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/btn_down"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="-5dp"
                android:alpha="0.7"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dpad_center" />

            <ImageButton
                android:id="@+id/btn_left"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="-5dp"
                android:alpha="0.7"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dpad_center"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_right"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="-5dp"
                android:alpha="0.7"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dpad_center"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_a"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/a"
            android:textColor="#FFFFFF"
            android:background="@drawable/round_button_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="80dp"/>

        <Button
            android:id="@+id/btn_b"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/b"
            android:textColor="#FFFFFF"
            android:background="@drawable/round_button_bg"
            app:layout_constraintEnd_toStartOf="@+id/btn_a"
            app:layout_constraintTop_toBottomOf="@+id/btn_a"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_select"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/select"
            android:textSize="11sp"
            android:alpha="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_start"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/start"
            android:textSize="11sp"
            android:alpha="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_select"
            android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>